resolved alignment issues, added styles, placement, bg-color

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,24 +2,28 @@
   width: 100%;
   height: 450px;
   background: url("../assets/header.png");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-color: gold;
 }
 
 .footer {
   width: 100%;
   height: 125px;
+  display: flex;
+  justify-content: center;
+  background-color: gold;
   //   background: url("../assets/footer.png");
   //   background-size: cover;
   //   background-repeat: no-repeat;
 }
 .container {
+  margin: 20px auto;
   .welcome-section {
     display: inline-block;
     width: 50%;
     vertical-align: top;
     margin: 10px;
-    height: 400px;
   }
 
   .calculator-container {
@@ -27,6 +31,6 @@
     width: 48%;
     padding: 25px;
     border-radius: 4%;
-    height: 400px;
+    height: 380px;
   }
 }
