--- a/src/app/shape-form/shape-form.component.scss
+++ b/src/app/shape-form/shape-form.component.scss
@@ -2,9 +2,9 @@
 //     content: " *";
 //     color: #ff0000;
 // }
-// .shape-form-layout {
-//   width: 65%;
-// }
+.shape-form-layout {
+  width: 70%;
+}
 
 .submit-btn-container {
   display: flex;
